[package]
name = "hiv"
version = "0.1.0"
edition = "2018"


[workspace]
members = ["shaders"]

[dependencies]
anyhow = "1.0"
winit = "0.25"
wgpu = "0.9"
imgui-wgpu = "0.16"
imgui = "0.7"
imgui-winit-support = { version = "0.7", features = ["winit-25"], default-features = false }
pollster = "0.2"
bytemuck = "1.7"
notify = "4.0"
shaders = { path = "./shaders" }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "b9867d0e84d29d6e60ad62427f453b4829abda56" }
